--- a/index.html
+++ b/index.html
@@ -36,44 +36,18 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="#">Home<span class="sr-only">(current)</span></a></li>
-            <li><a href="#">Undergraduate</a></li>
-            <li><a href="#">Major in Italian</a></li>
-            <li><a href="#">Minor</a></li>
-            <li><a href="#">Honors</a></li>
-            <li><a href="#">Study Abroad</a></li>
-            <li><a href="#">Our Students</a></li>
-            <li><a href="#">Courses</a></li>
-            <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
-              <ul class="dropdown-menu">
-                <li><a href="#">Action</a></li>
-                <li><a href="#">Another action</a></li>
-                <li><a href="#">Something else here</a></li>
-                <li role="separator" class="divider"></li>
-                <li><a href="#">Separated link</a></li>
-                <li role="separator" class="divider"></li>
-                <li><a href="#">One more separated link</a></li>
-              </ul>
-            </li>
+            <li ><a href="http://greenbergz.github.io/next-project"target="">Home</a></li>
+            <li ><a href=" http://greenbergz.github.io/Italian-Undergraduate-Program" target = "">Undergraduate</a></li>
+            <li class="active"><a href="http://greenbergz.github.io/The-Major-In-Italian/"target="">Major in Italian<span class="sr-only">(current)</span></a></li>
+            <li><a href="http://greenbergz.github.io/The-Minor-in-Italian/"target="">Minor</a></li>
+            <li><a href="http://greenbergz.github.io/Honors/"target="">Honors</a></li>
+            <li><a href="http://greenbergz.github.io/Study-Abroad/"target="">Study Abroad</a></li>
+            <li><a href="http://greenbergz.github.io/Our-Students." target = "">Our Students</a></li>
+            
+
           </ul>
-          <form class="navbar-form navbar-left" role="search">
-            <div class="form-group">
-              <input type="text" class="form-control" placeholder="Search">
-            </div>
-            <button type="submit" class="btn btn-default">Submit</button>
-          </form>
-          <ul class="nav navbar-nav navbar-right">
-            <li><a class="read-more" href="http://greenbergz.github.io/programs/" target="">Programs</a></li>
-            <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
-              <ul class="dropdown-menu">
-                <li><a href="#">Action</a></li>
-                <li><a href="#">Another action</a></li>
-                <li><a href="#">Something else here</a></li>
-                <li role="separator" class="divider"></li>
-                <li><a href="#">Separated link</a></li>
-              </ul>
+
+
             </li>
           </ul>
         </div><!-- /.navbar-collapse -->
